# TeleBotConsole

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
common/: build.gradle.kts
common/src/main/java/cc/ioctl/telebot/util/: Log.java
common/src/main/java/cc/ioctl/util/: Log.java
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt
core/src/main/cpp/src/jni/: cc_ioctl_cli_Console.h  cc_ioctl_intern_NativeBridge.h  cc_ioctl_telebot_cli_Console.h  cc_ioctl_telebot_intern_NativeBridge.h  cc_ioctl_telebot_util_OsUtils.h  cc_ioctl_util_OsUtils.h
core/src/main/cpp/src/jni_core/: Console.cpp  Console.h  LogImpl.cpp  LogImpl.h  TDLibJniBridge.cpp  natives_utils.h
core/src/main/cpp/src/utils/: CachedThreadPool.cpp  CachedThreadPool.h  ProcessUtils.h  SyncUtils.h  file_utils.h
core/src/main/cpp/src/utils/config/: ConfigManager.h
core/src/main/cpp/src/utils/log/: Log.cpp  Log.h
core/src/main/cpp/src/utils/text/: EncodingHelper.cpp  EncodingHelper.h
core/src/main/java/cc/ioctl/cli/: Console.java
core/src/main/java/cc/ioctl/intern/: NativeBridge.java  TDLibPollThread.java
core/src/main/java/cc/ioctl/startup/: BotStartupMain.java  StartupRoutine.java
core/src/main/java/cc/ioctl/tdlib/tlrpc/: RemoteApiException.java  TlRpcField.java  TlRpcJsonObject.java
core/src/main/java/cc/ioctl/telebot/cli/: Console.java
core/src/main/java/cc/ioctl/telebot/intern/: NativeBridge.java  TDLibPollThread.java
core/src/main/java/cc/ioctl/util/: Base64.java  ByteUtils.java  IoUtils.java  NativeUtils.java  OsUtils.java  TextUtils.java
core/src/main/kotlin/cc/ioctl/tdlib/: RobotServer.kt
core/src/main/kotlin/cc/ioctl/telebot/: EventHandler.kt  TransactionDispatcher.kt
core/src/main/kotlin/cc/ioctl/tgbot/: EventHandler.kt  TransactionDispatcher.kt
core/src/main/kotlin/cc/ioctl/util/: Condition.kt
core/src/main/resources/config/: bots.toml  plugins.toml  server.toml
libs/mmkv/: build.gradle.kts
libs/mmkv/src/main/cpp/: CMakeLists.txt  native-bridge.cpp
plugins/: build.gradle.kts
src/main/cpp/: .gitignore
src/main/cpp/src/utils/: ConcurrentHashMap.h  ProcessUtils.cpp  SyncUtils.cpp  file_utils.cpp
src/main/cpp/src/utils/config/: ConfigManager.cpp
src/main/cpp/src/utils/log/: Log.h
(+58 files in other folders)
